--- a/public/search/search.jade
+++ b/public/search/search.jade
@@ -265,7 +265,7 @@
               div Notes
         
 
-        button.btn.btn-primary(ng-click="search()", type="submit") Search
+        button.btn.btn-default(ng-click="search()", type="submit") Search
           
     .col-lg-9
       // pre.query {{query}}
