--- a/public/app.css
+++ b/public/app.css
@@ -567,6 +567,10 @@ hr {
   background-color: #DEF;
 }
 
-.list-delete-button {
+.list-option {
+  margin-left: 10px;
+}
+
+.list-delete {
   float: right;
 }
