--- a/public/app.css
+++ b/public/app.css
@@ -578,16 +578,26 @@ hr {
 .add-to-list-btn {
   float: right;
   position: relative;
-  bottom: 10px;
-  right: -7px;
+  bottom: 15px;
+}
+
+.add-to-list-btn .input-group {
+  width: 225px;
+  margin: 10px;
 }
 
 .add-to-list-label {
   float: right;
   position: relative;
-  bottom: 7px;
+  bottom: 12px;
+  margin-right: 10px;
 }
 
 .add-to-list-btn .caret {
   margin-left: 5px;
+}
+
+.topfix:first-child .row {
+  position: relative;
+  top: -10px;
 }
