--- a/public/lists/lists.jade
+++ b/public/lists/lists.jade
@@ -6,29 +6,30 @@
     .row
         .col-lg-3
             .list-group
-                .list-group-item.list-group-item-info(ng-show="listModel.listsLoading") Loading lists...
-                .list-group-item.list-group-item-warning(ng-show="listModel.myLists && !listModel.myLists.length") No lists
-                a.list-group-item(ng-repeat="list in listModel.myLists", ng-click="selectList(list)", ng-class="{ active: list === listModel.selectedList }")
+                .list-group-item.list-group-item-info(ng-show="sharedListModel.listsLoading") Loading lists...
+                .list-group-item.list-group-item-warning(ng-show="sharedListModel.myLists && !sharedListModel.myLists.length") No lists
+                a.list-group-item(ng-repeat="list in sharedListModel.myLists", ng-click="selectList(list)", ng-class="{ active: list === viewModel.selectedList }")
                     h4.list-group-item-heading {{ list.name }}
                     p.list-group-item-text {{ list.entryIDs.length }} {{ list.entryIDs.length === 1 ? 'entry' : 'entries' }}
                 .list-group-item
-                    form
-                        .form-group
-                            input.form-control(ng-model="listModel.newListName", placeholder="new list name")
-                        button.btn.btn-default(ng-click="newList(listModel.newListName)", type="submit", ng-disabled="!listModel.newListName") Create New List
+                    form.input-group.input-group-sm
+                      input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
+                      span.input-group-btn
+                        button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="newList(viewModel.newListName)") Create New List
                 
         
         .col-lg-9
-            .row(ng-show="!listModel.selectedList")
+            .row(ng-show="!viewModel.selectedList")
                 .text-center no list selected
-            .row(ng-show="listModel.selectedList")
-                a.small.list-option(ng-click="selectAllEntries(listModel.selectedList)") select all
-                a.small.list-option(ng-click="selectNoEntries(listModel.selectedList)") select none
-                a.small.list-delete(ng-click="deleteList(listModel.selectedList)") delete this list
-            .row(ng-show="listModel.selectedList")
+            .row(ng-show="viewModel.selectedList")
+                a.small.list-option(ng-click="selectAllEntries()") select all
+                a.small.list-option(ng-click="deselectAllEntries()") deselect all
+                a.small.list-option(ng-click="removeSelectedEntriesFromList()") remove selected entries from list
+                a.small.list-delete(ng-click="deleteList()") delete this list
+            .row(ng-show="viewModel.selectedList")
                 .list-group.margin-top
-                    .list-group-item.list-group-item-info(ng-show="!listModel.selectedList.entriesLoaded") Loading entries...
-                    .list-group-item.list-group-item-warning(ng-show="listModel.selectedList.entriesLoaded && !listModel.selectedList.entryIDs.length") No entries
-                    a.list-group-item(ng-repeat="entry in listModel.selectedList.entries", ng-href="#/entries/{{entry.index}}")
+                    .list-group-item.list-group-item-info(ng-show="!viewModel.selectedListEntries") Loading entries...
+                    .list-group-item.list-group-item-warning(ng-show="viewModel.selectedListEntries && !viewModel.selectedListEntries.length") No entries
+                    a.list-group-item(ng-repeat="entry in viewModel.selectedListEntries", ng-href="#/entries/{{entry.index}}")
                         h4.list-group-item-heading {{entry.fullName}}
                         p.list-group-item-text {{entry.biography.slice(0,200)}} ...
