--- a/public/search/search.jade
+++ b/public/search/search.jade
@@ -287,20 +287,24 @@
           .list-group-item(ng-repeat="entry in entries", ng-href="#/entries/{{entry.index}}")
             h4.list-group-item-heading {{entry.fullName}}
             p.list-group-item-text {{entry.biography.slice(0,200)}} ...
-              div.btn-group.add-to-list-btn(ng-click="downloadLists()")
+              div.btn-group.add-to-list-btn
                 button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
                   span Add to List
                   span.caret
                 ul.dropdown-menu
-                  li(ng-show="loadingLists")
+                  li(ng-show="sharedListModel.listsLoading")
                     span Loading lists...
-                  li(ng-show="lists && !lists.length")
-                    span (you don't have any lists)
-                  li(ng-repeat="list in lists")
-                    a(ng-click="addToList(list, entry)") {{ list.name }}
-              span.add-to-list-label.label.label-success(ng-show="entry.success") Added to list!
-              span.add-to-list-label.label.label-info(ng-show="entry.alreadyInList") Already in list; didn't add.
-        
+                  li(ng-repeat="list in sharedListModel.myLists")
+                    a(ng-click="addToList(entry, list)") {{ list.name }}
+                  li.divider(role="separator")
+                  li.dropdown-header or add to a new list:
+                  li
+                    form.input-group.input-group-sm
+                       input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
+                       span.input-group-btn
+                         button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="addToNewList(entry)") Create & Add
+              span.add-to-list-label.label.label-success(ng-show="entry.addedToList") Added to list
+              span.add-to-list-label.label.label-info(ng-show="entry.alreadyInList") Already in list
       div(ng-show="noResults && !searching")
         p No results
       
