--- a/public/explore/explore.jade
+++ b/public/explore/explore.jade
@@ -164,15 +164,15 @@
           p.pull-left.text-large
             strong {{entries.length}} 
             | matching results
-          button#export-button.btn.btn-default.btn-sm.pull-right(data-loading-text="Loading...", ng-click="export()", ng-disabled="!entries.length")
-            i.fa.fa-download.margin-right
-            | Export results
         
+        //  begin standardized results panel
         .panel.panel-default
           .panel-heading
+            
             button.btn.btn-default.btn-xs.list-option(type="button", ng-click="selectAllEntries()") select all
             button.btn.btn-default.btn-xs.list-option(type="button", ng-click="deselectAllEntries()") deselect all
-            div.btn-group.add-to-list-btn
+            
+            div.btn-group.add-to-list-btn.list-option
               button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
                 span Add Selected Entries to List
                 span.caret
@@ -188,26 +188,31 @@
                     input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
                     span.input-group-btn
                       button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="addSelectedEntriesToNewList()") Create & Add
+
+            div.btn-group.list-option
+              button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
+                span Sort by...
+                span.caret
+              ul.dropdown-menu
+                li(ng-repeat="dimension in sortModel.activeSortableDimensions")
+                  a(ng-click="sortModel.dimension = dimension.sorting;", ng-class="{ 'bg-info' : sortModel.dimension === dimension.sorting }") {{ dimension.label }}
+                li.divider
+                li
+                  a(ng-click="sortModel.dimension = 'index'", ng-class="{ 'bg-info' : sortModel.dimension === 'index' }") None
+                li.divider
+                li
+                  .checkbox.entry-order-checkbox
+                    label
+                      input(type="checkbox", ng-model="sortModel.reverseSorting")
+                      div Reverse Order  
+
+            button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="Loading...", ng-click="export()", ng-disabled="!entries.length")
+              i.fa.fa-download.margin-right
+              | Export results    
+
           .panel-body
             table.table.table-hover
               tbody.entry-row
-                tr.info
-                  td(colspan="2")
-                    div.btn-group
-                      button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
-                        span Sort by...
-                        span.caret
-                      ul.dropdown-menu
-                        li
-                          a(ng-click="sortModel.dimension = 'index'", ng-class="{ 'bg-info' : sortModel.dimension === 'index' }") None
-                        li.divider
-                        li(ng-repeat="dimension in sortModel.activeSortableDimensions")
-                          a(ng-click="sortModel.dimension = dimension; console_log(dimension)", ng-class="{ 'bg-info' : sortModel.dimension === dimension }") {{ dimension.replace('[0]', '').split('.').join(' - ') }}
-                    .checkbox.entry-order-checkbox
-                      label
-                        input(type="checkbox", ng-model="sortModel.reverseSorting")
-                        div Reverse Order
-
                 tr(ng-repeat="entry in entries | orderBy : sortModel.dimension : sortModel.reverseSorting", ng-class="{ warning: entry.selected }")
                   td.entry-checkbox
                     input(type="checkbox", ng-model="entry.selected")
