--- a/public/explore/explore.jade
+++ b/public/explore/explore.jade
@@ -198,7 +198,7 @@
                   a(ng-click="sortModel.dimension = dimension.sorting;", ng-class="{ 'bg-info' : sortModel.dimension === dimension.sorting }") {{ dimension.label }}
                 li.divider
                 li
-                  a(ng-click="sortModel.dimension = 'index'", ng-class="{ 'bg-info' : sortModel.dimension === 'index' }") None
+                  a(ng-click="sortModel.dimension = 'index'", ng-class="{ 'bg-info' : sortModel.dimension === 'index' }") Index
                 li.divider
                 li
                   .checkbox.entry-order-checkbox
