--- a/public/search/search.jade
+++ b/public/search/search.jade
@@ -283,11 +283,14 @@
           strong {{entries.length}} 
           | results
         
+        //  begin standardized results panel
         .panel.panel-default
           .panel-heading
+
             button.btn.btn-default.btn-xs.list-option(type="button", ng-click="selectAllEntries()") select all
             button.btn.btn-default.btn-xs.list-option(type="button", ng-click="deselectAllEntries()") deselect all
-            div.btn-group.add-to-list-btn
+
+            div.btn-group.add-to-list-btn.list-option
               button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
                 span Add Selected Entries to List
                 span.caret
@@ -303,10 +306,32 @@
                     input.form-control(type="text", placeholder="new list name", ng-model="viewModel.newListName")
                     span.input-group-btn
                       button.btn.btn-default(type="submit", ng-disabled="!viewModel.newListName", ng-click="addSelectedEntriesToNewList()") Create & Add
+
+            div.btn-group.list-option
+              button.btn.btn-default.btn-xs.dropdown-toggle(type="button", data-toggle="dropdown")
+                span Sort by...
+                span.caret
+              ul.dropdown-menu
+                li(ng-repeat="dimension in sortModel.activeSortableDimensions")
+                  a(ng-click="sortModel.dimension = dimension.sorting;", ng-class="{ 'bg-info' : sortModel.dimension === dimension.sorting }") {{ dimension.label }}
+                li.divider
+                li
+                  a(ng-click="sortModel.dimension = 'index'", ng-class="{ 'bg-info' : sortModel.dimension === 'index' }") Index
+                li.divider
+                li
+                  .checkbox.entry-order-checkbox
+                    label
+                      input(type="checkbox", ng-model="sortModel.reverseSorting")
+                      div Reverse Order  
+
+            button#export-button.btn.btn-default.btn-xs.pull-right(data-loading-text="Loading...", ng-click="export()", ng-disabled="!entries.length")
+              i.fa.fa-download.margin-right
+              | Export results              
+
           .panel-body
             table.table.table-hover
               tbody.entry-row
-                tr(ng-repeat="entry in entries", ng-class="{ warning: entry.selected }")
+                tr(ng-repeat="entry in entries | orderBy : sortModel.dimension : sortModel.reverseSorting", ng-class="{ warning: entry.selected }")
                   td.entry-checkbox
                     input(type="checkbox", ng-model="entry.selected")
                   td.entry-list-item
