Changed Pusruits to Employments and Identifiers

--- a/public/entry/entry.jade
+++ b/public/entry/entry.jade
@@ -72,7 +72,7 @@
           
           .col-lg-12.col-md-4.col-sm-6(ng-show="entry.pursuits.length") 
             .panel.panel-default
-              .panel-heading Pursuits & Situations
+              .panel-heading Employments and Identifiers
               ul.list-group
                 li.list-group-item(ng-repeat="e in entry.pursuits") 
                   a(ng-click="search({pursuits:e.pursuit})") {{e.pursuit}}
