--- a/public/search/search.jade
+++ b/public/search/search.jade
@@ -49,7 +49,7 @@
             typeahead-focus-first="false" typeahead-min-length="2", typeahead-wait-ms="100")
 
         .form-group
-          label Pursuits & Situations
+          label Employments and Identifiers
           input.input-sm.form-control(
             type="text", 
             ng-model="query.pursuits",
