Got the server to count the number of entries with a certain number of features and send it back; haven't added it to the interface yet.

--- a/public/admin/admin.jade
+++ b/public/admin/admin.jade
@@ -122,6 +122,9 @@
         
 
       a#reload.btn.btn-danger(ng-click="reload()", data-loading-text="Loading...") Reload selected
+      
+      hr
+      a.btn.btn-default(ng-click="recount()") Recount
 
       .row
         .col-lg-12
